# ThermoTools

./: .gitignore  01_cp_download.ipynb  02_cp_parse.ipynb  03_lv_parse.ipynb  04_lv_parse.ipynb  04_psat_parse.ipynb  05_compile.ipynb  05_psat_parse.ipynb  09_compile.ipynb  CLAUDE.md  LICENSE.txt  README.md  README.txt  antoine.py  cas.ipynb  common.py  compile.ipynb  cp_parse.ipynb  cp_shomate_vs_janaf.ipynb  deltah_water.ipynb  download.ipynb  mmw.ipynb  mmw.py  mmw_elem.ipynb  parse.ipynb  phase.py  psat.ipynb  psat_water.ipynb  pyproject.toml  shomate_test.ipynb  water.py  water_enthalpy.ipynb
compiled/: C2H4.ncdf  CH4.ncdf  CHN.ncdf  CO.ncdf  CO2.ncdf  H2.ncdf  H2O.ncdf  N2.ncdf  N2O.ncdf  NH3.ncdf  O2.ncdf  SO2.ncdf
misc/: cp_shomate_vs_janaf.ipynb  deltah_water.ipynb  psat_water.ipynb
mmw/: elements.csv
old/: mmw_combined.ipynb  pipeline.py
src/thermotools/: __init__.py  common.py  moles.py  phase.py  plot.py  util.py
src/thermotools/data/lv/web/: coker2007_appendixC.csv  coker2007_appendixC.xlsx  wagner_and_pruss_table14.xlsx
src/thermotools/data/mmw/dat/: elements.csv
src/thermotools/data/psat/web/: woitke2017_TableD2.csv  woitke2017_TableD2.ods
workflow/: 01_cp_download.ipynb  02_cp_parse.ipynb  03_lv_parse.ipynb  04_psat_parse.ipynb  05_compile.ipynb  05_vdw_tabulate.ipynb  06_aqua_tabulate.ipynb  07_chabrier_tabulate.ipynb  99_compile.ipynb
