[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "thermotools"
version = "0.3.0"
description = "Download, process, and compile thermodynamic data"
readme = "README.md"
requires-python = ">=3.12"
authors = [
	{name = "Harrison Nicholls, email = harrison.nicholls@ast.cam.ac.uk"},
]
keywords = [
    "Astronomy",
    "Gas",
    "Thermodynamics",
    "Physics",
    "Chemistry"
]
license = {text = "Apache 2.0 License"}
dependencies = [
    "matplotlib",
    "netCDF4",
    "numpy",
    "scipy",
    "requests"
]

[project.urls]
homepage = "https://github.com/nichollsh/ThermoTools"
issues = "https://github.com/nichollsh/ThermoTools/issues"
changelog = "https://github.com/nichollsh/ThermoTools/releases"

[tool.setuptools]
py-modules = ['thermotools']
package-dir = {"thermotools" = "src/thermotools" }
include-package-data = true

[tool.setuptools.package-data]
thermotools = ['data/*']
